src/snapshots/linesweeper__tests__two_squares.snap
---
source: src/lib.rs
expression: output
---
Contours(
  contours: [
    Contour(
      points: [
        Point(
          y: 0.5,
          x: 0.0,
        ),
        Point(
          y: 0.5,
          x: 0.5,
        ),
        Point(
          y: 0.0,
          x: 0.5,
        ),
        Point(
          y: 0.0,
          x: 0.0,
        ),
      ],
      segs: [],
      parent: None,
      outer: true,
    ),
  ],
)
